--- a/core/templates/oim_chart.html
+++ b/core/templates/oim_chart.html
@@ -151,7 +151,7 @@
                                         {% endif %}
                                     </td>
                                     <td class="text-right">
-                                       {% widthratio row.ejecutado row.asignado 100 %}
+                                        {% widthratio row.ejecutado row.asignado 100 %}
                                     </td>
                                 </tr>
                             {% endfor %}
@@ -340,9 +340,17 @@
                         para el a&ntilde;o {{ year }} es de:
                         <span class="amarillo pma-number">
                            {% if periodo_list|keyvalue:year == 'I' %}
-                               {{ otros.0.asignado_percent|intcomma }}
+                               {% if otros.0.asignado_percent and otros.0.asignado_percent > 0 %}
+                                   {{ otros.0.asignado_percent|intcomma }}
+                               {% else %}
+                                   {{ otros.0.asignado|million|intcomma }}
+                               {% endif %}
                            {% else %}
-                               {{ otros.0.ejecutado_percent|intcomma }}
+                                {% if otros.0.ejecutado_percent and otros.0.ejecutado_percent > 0 %}
+                                   {{ otros.0.ejecutado_percent|intcomma }}
+                               {% else %}
+                                   {{ otros.0.ejecutado|million|intcomma }}
+                               {% endif %}
                            {% endif %}
                             C&oacute;rdobas
 			  </span>
