validandi su ejecutado_percent es <= 0 pueda imprimir el 0

--- a/core/templates/municipal-triangle.html
+++ b/core/templates/municipal-triangle.html
@@ -210,7 +210,7 @@
                     </strong>
                     <div class="position-balloon">
                         <span {% if forloop.counter <= 10 %}style="left: 38%"
-                                  {% elif forloop.counter >= 100 %}style="left: 16.3%"{% endif %}>{{ forloop.counter }}</span>
+                              {% elif forloop.counter >= 100 %}style="left: 16.3%"{% endif %}>{{ forloop.counter }}</span>
                         <span class="municipio-data">
                            {% if municipio|lower == row.gasto__municipio__nombre|lower or municipio|lower == row.ingreso__municipio__nombre|lower or municipio|lower == row.inversion__municipio__nombre|lower or municipio|lower == row.nombre|lower %}
                                <b>MI MUNICIPIO</b>
@@ -218,7 +218,7 @@
                             {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
                             <br>
                             <span class="font-roboto">
-                                {% if row.ejecutado_percent %}
+                                {% if row.ejecutado_percent or row.ejecutado_percent == 0%}
                                     {% if row.ejecutado_percent|intcomma|floatformat:-2 %}
                                         {{ row.ejecutado_percent|default_if_none:0|intcomma|floatformat:-2 }}
                                     {% else %}
@@ -249,13 +249,13 @@
                     </strong>
                     <div class="position-balloon">
                         <span {% if forloop.counter <= 10 %}style="left: 38%"
-                                  {% elif forloop.counter >= 100 %}style="left: 16.3%"{% endif %}>{{ forloop.counter }}</span>
+                              {% elif forloop.counter >= 100 %}style="left: 16.3%"{% endif %}>{{ forloop.counter }}</span>
                         <span class="municipio-data">
                             <b>MI MUNICIPIO</b>
                         {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
                         <br>
                           <span class="font-roboto">
-                                {% if row.ejecutado_percent:-2 %}
+                                {% if row.ejecutado_percent or row.ejecutado_percent == 0 %}
                                     {% if row.ejecutado_percent|intcomma|floatformat:-2 %}
                                         {{ row.ejecutado_percent|default_if_none:0|intcomma|floatformat:-2 }}
                                     {% else %}
@@ -286,7 +286,7 @@
                     </strong>
                     <div class="position-balloon">
                         <span {% if forloop.counter <= 10 %}style="left: 38%"
-                                  {% elif forloop.counter >= 100 %}style="left: 16.3%"{% endif %}>{{ forloop.counter }}</span>
+                              {% elif forloop.counter >= 100 %}style="left: 16.3%"{% endif %}>{{ forloop.counter }}</span>
                         <span class="municipio-data">
                            {% if municipio|lower == row.gasto__municipio__nombre|lower or municipio|lower == row.ingreso__municipio__nombre|lower or municipio|lower == row.inversion__municipio__nombre|lower or municipio|lower == row.nombre|lower %}
                                <strong></strong>
@@ -294,7 +294,7 @@
                             {% firstof row.gasto__municipio__nombre row.ingreso__municipio__nombre row.inversion__municipio__nombre row.nombre %}
                             <br>
                             <span class="font-roboto">
-                                {% if row.ejecutado_percent %}
+                                {% if row.ejecutado_percent or row.ejecutado_percent == 0 %}
                                     {% if row.ejecutado_percent|intcomma|floatformat:-2 %}
                                         {{ row.ejecutado_percent|default_if_none:0|intcomma|floatformat:-2 }}
                                     {% else %}
